--- a/app/components/header.html
+++ b/app/components/header.html
@@ -1,13 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.css">
-  <title>Document</title>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="css/style.min.css">
+    <title>Luxurious Bridal </title>
 
-</head>
+  </head>
 
-<body>
-  
+  <body>
+    <div class="wrapper">
+      <header class="header">
+        <div class="container">
+          <div class="header__inner">
+            <div class="header__logo">
+              <a class="logo" href="#">
+                <img src="images/boss-logo.svg" alt="Boss Logo">
+              </a>
+            </div>
+            <ul class="header__long">
+              <li class="header__long-item">
+                <a class="header__long-link header__long--active"
+                  href="#">EN</a>
+              </li>
+              <li class="header__long-item">
+                <a class="header__long-link" href="#">UA</a>
+              </li>
+            </ul>
+            <nav class="menu">
+              <ul class="menu__list">
+                <li class="menu__item">
+                  <a class="menu__link" href="#">
+                    CATALOG
+                  </a>
+                </li>
+                <li class="menu__item">
+                  <a class="menu__link" href="#">
+                    COLLECTIONS
+                  </a>
+                </li>
+                <li class="menu__item">
+                  <a class="menu__link" href="#">
+                    ABOUT
+                  </a>
+                </li>
+                <li class="menu__item">
+                  <a class="menu__link" href="#">
+                    BOOK AN APPOINTMENT
+                  </a>
+                </li>
+                <li class="menu__item">
+                  <a class="menu__link" href="#">
+                    CONTACT
+                  </a>
+                </li>
+              </ul>
+            </nav>
+            <ul class="header__actions">
+              <li class="header__actions-item">
+                <a class="header__actions-link" href="#">
+                  <svg width="24" height="24">
+                    <use xlink:href="images/sprite.svg#user"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="header__actions-item">
+                <a class="header__actions-link" href="#">
+                  <svg width="24" height="22">
+                    <use xlink:href="images/sprite.svg#wishlist"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="header__actions-item">
+                <a class="header__actions-link" href="#">
+                  <svg width="24" height="24">
+                    <use xlink:href="images/sprite.svg#shopping-bag"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </header>
