--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -1,34 +1,34 @@
-$color-accent:#3B2317;
-$color-primary:#513C27;
-$color-text-muted: #94897C;
-
+$color-accent: #3b2317;
+$color-primary: #513c27;
+$color-text-muted: #94897c;
+$bg-primary: #e9e1d7;
 
 %open-sans-300 {
-  font-family: 'OpenSans-light', sans-serif;
+  font-family: "OpenSans-light", sans-serif;
   font-weight: 300;
 }
 
 %open-sans-400 {
-  font-family: 'OpenSans-Regular', sans-serif;
+  font-family: "OpenSans-Regular", sans-serif;
   font-weight: 400;
 }
 
 %open-sans-700 {
-  font-family: 'OpenSans-Bold', sans-serif;
+  font-family: "OpenSans-Bold", sans-serif;
   font-weight: 700;
 }
 
 %inter-400 {
-  font-family: 'Inter-Regular', sans-serif;
+  font-family: "Inter-Regular", sans-serif;
   font-weight: 400;
 }
 
 %lora-400 {
-  font-family: 'Lora-Regular', serif;
+  font-family: "Lora-Regular", serif;
   font-weight: 400;
 }
 
 %lora-500 {
-  font-family: 'Lora-Medium', sans-serif;
+  font-family: "Lora-Medium", sans-serif;
   font-weight: 500;
 }
