--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,7 +1,7 @@
-@use 'vars';
-@use 'reset';
-@use 'fonts';
-@use 'global';
+@use "vars";
+@use "reset";
+@use "fonts";
+@use "global";
 
 body {
   @extend %open-sans-400;
@@ -15,24 +15,29 @@ body {
   text-transform: uppercase;
   font-size: 16px;
   color: vars.$color-primary;
+
   &__inner {
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
   }
+
   &__logo {
     width: 100%;
     text-align: center;
     margin-bottom: 15px;
   }
+
   &__long {
     display: flex;
+
     &--active {
       @extend %open-sans-700;
       color: vars.$color-accent;
     }
   }
+
   &__actions {
     display: flex;
     gap: 20px;
@@ -49,4 +54,98 @@ body {
     align-items: center;
     gap: 30px;
   }
+}
+
+.footer {
+  font-size: 16px;
+  color: vars.$color-text-muted;
+
+  &__menu {
+    padding: 55px 0 44px;
+    border-bottom: 1px solid vars.$color-text-muted;
+    margin-bottom: 50px;
+  }
+
+  &__menu-list {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+
+  &__elements {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    margin-bottom: 50px;
+  }
+
+  &__element-title {
+    opacity: 0.5;
+    margin-bottom: 20px;
+  }
+
+  &__social-list {
+    display: flex;
+    gap: 10px;
+  }
+
+  &__social-item {
+    margin-bottom: 5px;
+  }
+
+  &__form {
+    width: 250px;
+    position: relative;
+  }
+
+  &__form-input {
+    display: block;
+    width: 100%;
+    border: none;
+    border-bottom: 1px solid vars.$bg-primary;
+    padding: 1px 30px 5px 0;
+    color: vars.$color-text-muted;
+
+    &::placeholder {
+      color: vars.$color-text-muted;
+    }
+  }
+
+  &__form-btn {
+    position: absolute;
+    right: 0;
+    top: 1px;
+    cursor: pointer;
+  }
+
+  &__bottom {
+    background-color: vars.$bg-primary;
+    padding: 7px 0 9px;
+    color: vars.$color-primary;
+    font-size: 11px;
+  }
+
+  &__bottom-inner {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 26px;
+  }
+
+  &__bottom-list {
+    display: flex;
+    gap: 0 37px;
+  }
+
+  &__bottom-item+.footer__bottom-item {
+    position: relative;
+
+    &::before {
+      content: '|';
+      position: absolute;
+      left: -21px;
+    }
+
+  }
+
 }
