--- a/app/components/footer.html
+++ b/app/components/footer.html
@@ -17,7 +17,7 @@
             About
           </a>
         </li>
-        <li class="footer__menu-item">
+        <li class="footer__menu-item footer__logo">
           <a class="logo" href="#">
             <img src="images/logo.svg" alt="Luxurious  Logo">
           </a>
