--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -10,6 +10,14 @@ body {
   color: vars.$color-accent;
 }
 
+.promo {
+  background-color: vars.$bg-primary;
+  padding: 7px 0 9px;
+  font-size: 11px;
+  text-transform: uppercase;
+  text-align: center;
+}
+
 .header {
   padding: 20px 0 30px;
   text-transform: uppercase;
@@ -70,6 +78,15 @@ body {
     display: flex;
     justify-content: space-around;
     align-items: center;
+  }
+
+  &__menu-link {
+    border-bottom: 1px solid vars.$color-primary;
+  }
+
+  &__logo {
+    margin-left: -30px;
+    margin-right: -30px;
   }
 
   &__elements {
@@ -148,4 +165,34 @@ body {
 
   }
 
+}
+
+.top {
+
+  &__inner {
+    display: flex;
+    flex-direction: column;
+    padding: 115px 0 50px;
+    margin-right: 134px;
+    max-width: 446px;
+    margin-left: auto;
+  }
+
+  &__title {
+    @extend %open-sans-400;
+    font-size: 80px;
+    line-height: 1.2;
+    margin-bottom: 60px;
+
+  }
+
+  &__link {
+    color: #fff;
+    padding: 12px 38px;
+    display: inline-block;
+    background-color: vars.$color-accent;
+    border-radius: 3px;
+    text-transform: uppercase;
+    align-self: start;
+  }
 }
