added section our-advantages

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -282,6 +282,7 @@ body {
     @extend %lora-400;
     font-size: 45px;
     margin-bottom: 20px;
+    text-transform: uppercase;
   }
 
   &__text {
@@ -322,6 +323,8 @@ body {
     color: #fff;
     margin-top: 40px;
     margin-bottom: 20px;
+    position: relative;
+    z-index: 10;
   }
 
   &__form-caption {
@@ -331,6 +334,15 @@ body {
 
 .designer {
   padding: 150px 0 210px;
+  position: relative;
+
+  &__img-decor {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    top: -225px;
+    z-index: 5;
+  }
 
   &__inner {
     padding: 0 40px;
@@ -346,6 +358,7 @@ body {
     @extend %lora-400;
     font-size: 45px;
     margin-bottom: 50px;
+    text-transform: uppercase;
   }
 
   &__text {
@@ -379,5 +392,61 @@ body {
     padding: 10px 90px;
     color: vars.$color-text-muted;
     border: 1px solid vars.$color-text-muted;
+  }
+}
+
+.our-advantages {
+  background-color: vars.$bg-primary;
+
+  &__wrapper {
+    padding: 64px 0 34px;
+    display: flex;
+    position: relative;
+  }
+
+  &__img {
+    position: absolute;
+    bottom: 0;
+    left: 40px;
+  }
+
+  &__img-decor {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+  }
+
+  &__inner {
+    margin-left: auto;
+    padding-right: 128px;
+  }
+
+  &__title {
+    @extend %lora-400;
+    font-size: 45px;
+    margin-bottom: 50px;
+    text-transform: uppercase;
+  }
+
+  &__list {
+    column-count: 2;
+    column-gap: 80px;
+  }
+
+  &__item {
+    margin-bottom: 30px;
+    padding-left: 50px;
+    position: relative;
+
+    &::before {
+      content: '';
+      position: absolute;
+      width: 30px;
+      height: 22px;
+      left: 0;
+      background-image: url('../images/our-advantages-item-decor.svg');
+      background-repeat: no-repeat;
+      background-size: contain;
+    }
   }
 }
