--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -3,17 +3,17 @@ $color-primary: #513c27;
 $color-text-muted: #94897c;
 $bg-primary: #e9e1d7;
 
-%open-sans-300 {
+%opensans-300 {
   font-family: "OpenSans-light", sans-serif;
   font-weight: 300;
 }
 
-%open-sans-400 {
+%opensans-400 {
   font-family: "OpenSans-Regular", sans-serif;
   font-weight: 400;
 }
 
-%open-sans-700 {
+%opensans-700 {
   font-family: "OpenSans-Bold", sans-serif;
   font-weight: 700;
 }
