--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -4,7 +4,7 @@
 @use "global";
 
 body {
-  @extend %open-sans-400;
+  @extend %opensans-400;
   font-size: 20px;
   line-height: 1.3;
   color: vars.$color-accent;
@@ -41,7 +41,7 @@ body {
     display: flex;
 
     &--active {
-      @extend %open-sans-700;
+      @extend %opensans-700;
       color: vars.$color-accent;
     }
   }
@@ -179,7 +179,7 @@ body {
   }
 
   &__title {
-    @extend %open-sans-400;
+    @extend %opensans-400;
     font-size: 80px;
     line-height: 1.2;
     margin-bottom: 60px;
@@ -303,7 +303,7 @@ body {
     border-bottom: 1px solid vars.$color-text-muted;
     padding-bottom: 10px;
     background-color: transparent;
-    @extend %open-sans-400;
+    @extend %opensans-400;
     color: vars.$color-text-muted;
   }
 
@@ -505,11 +505,71 @@ body {
 
   &__box-date {
     font-size: 16px;
-    @extend %open-sans-300
+    @extend %opensans-300
   }
 
   &__box-bottom {
     grid-column: span 2;
     margin-left: auto;
+  }
+}
+
+.appointment {
+  padding: 50px 0 130px;
+  background-image: url('../images/appointment-decor.svg');
+  background-repeat: no-repeat;
+  background-position: center 105px;
+
+  &__title {
+    text-align: center;
+    @extend %lora-400;
+    font-size: 45px;
+    margin-bottom: 50px;
+    text-transform: uppercase;
+  }
+
+  &__box {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 40px;
+    padding: 0 40px;
+  }
+
+  &__box-form {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 0;
+  }
+
+  &__box-title {
+    @extend %lora-400;
+    font-size: 30px;
+    margin-bottom: 80px;
+  }
+
+  &__box-text {
+    @extend %opensans-700;
+    margin-bottom: 30px;
+    color: vars.$color-text-muted;
+  }
+
+  &__input {
+    border: none;
+    border-bottom: 1px solid vars.$color-text-muted;
+    color: vars.$color-text-muted;
+    padding-bottom: 10px;
+    margin-bottom: 20px;
+    background-color: transparent;
+  }
+
+  &__btn {
+    margin-top: auto;
+    text-transform: uppercase;
+    color: #fff;
+    background-color: vars.$color-accent;
+    padding: 12px;
+    border-radius: 3px;
+    border: none;
+    cursor: pointer;
   }
 }
