--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -18,3 +18,9 @@ body {
   margin: 0 auto;
   padding: 0 10px;
 }
+
+.container-big {
+  max-width: 1540px;
+  margin: 0 auto;
+  padding: 0 10px;
+}
