--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -25,6 +25,7 @@ body {
   font-size: 16px;
   color: vars.$color-primary;
 
+
   &__inner {
     display: flex;
     justify-content: space-between;
@@ -50,11 +51,13 @@ body {
   &__actions {
     display: flex;
     gap: 20px;
+    list-style: none;
   }
 }
 
 .logo {
   display: inline-block;
+
 }
 
 .menu {
@@ -62,6 +65,7 @@ body {
     display: flex;
     align-items: center;
     gap: 30px;
+    list-style: none;
   }
 }
 
@@ -73,12 +77,14 @@ body {
     padding: 55px 0 44px;
     border-bottom: 1px solid vars.$color-text-muted;
     margin-bottom: 50px;
+    list-style: none;
   }
 
   &__menu-list {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    list-style: none;
   }
 
   &__menu-link {
@@ -88,6 +94,7 @@ body {
   &__logo {
     margin-left: -30px;
     margin-right: -30px;
+
   }
 
   &__elements {
@@ -95,25 +102,34 @@ body {
     justify-content: space-between;
     gap: 20px;
     margin-bottom: 50px;
+    list-style: none;
+  }
+
+  &__element {
+    list-style: none;
   }
 
   &__element-title {
     opacity: 0.5;
     margin-bottom: 20px;
+
   }
 
   &__social-list {
     display: flex;
     gap: 10px;
+    list-style: none;
   }
 
   &__social-item {
     margin-bottom: 5px;
+
   }
 
   &__form {
     width: 250px;
     position: relative;
+
   }
 
   &__form-input {
@@ -141,6 +157,7 @@ body {
     padding: 7px 0 9px;
     color: vars.$color-primary;
     font-size: 11px;
+
   }
 
   &__bottom-inner {
@@ -148,11 +165,13 @@ body {
     justify-content: space-between;
     align-items: center;
     padding-left: 26px;
+
   }
 
   &__bottom-list {
     display: flex;
     gap: 0 37px;
+    list-style: none;
   }
 
   &__bottom-item+.footer__bottom-item {
@@ -1017,5 +1036,321 @@ body {
 
   100% {
     transform: translateX(-100%);
+  }
+}
+
+.blog-main {
+  &__inner {
+    padding: 40px 0;
+    border-top: 1px solid #dcddde;
+    border-bottom: 1px solid #dcddde;
+    display: flex;
+    gap: 40px;
+  }
+
+  &__img {
+    max-width: max-content;
+  }
+
+  &__content {
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__category {
+    font-size: 14px;
+    border: 1px solid #dcddde;
+    padding: 8px 24px;
+    align-self: flex-start;
+    margin-bottom: 40px
+  }
+
+  &__title {
+    @extend %lora-400;
+    font-size: 48px;
+    line-height: 1.2;
+    margin-bottom: 40px;
+    text-transform: uppercase;
+
+  }
+
+  &__text {
+    font-size: 24px;
+    opacity: 0.4;
+    margin-bottom: 40px;
+    max-width: 660px;
+  }
+
+  &__link {
+    margin-top: auto;
+    font-size: 24px;
+    border: 1px solid #dcddde;
+    padding: 32px 64px;
+    text-transform: uppercase;
+    align-self: flex-start;
+  }
+}
+
+.blog {
+  &__nav {
+    padding: 32px 0;
+    display: flex;
+    align-items: center;
+  }
+
+  &__nav-title {
+    @extend %lora-400;
+    font-size: 32px;
+    margin-right: auto;
+  }
+
+  &__nav-category {
+    margin-right: 35px;
+    width: 335px;
+    margin-bottom: 0;
+  }
+
+  &__nav-btns {
+    margin-left: 100px;
+    display: flex;
+    gap: 20px;
+  }
+
+  &__nav-btn {
+    padding: 0;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+  }
+
+  &__list {
+    display: grid;
+    gap: 50px 20px;
+    grid-template-columns: repeat(4, 1fr);
+  }
+
+  &__list-content {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__list-category {
+    align-self: start;
+    font-size: 14px;
+    margin-bottom: 16px;
+    padding: 8px 24px;
+    border: 1px solid #dcddde;
+  }
+
+  &__list-title {
+    font-size: 24px;
+    margin-bottom: 8px;
+    @extend %lora-500;
+  }
+
+  &__list-data {
+    font-size: 16px;
+    opacity: 0.4;
+    @extend %inter-400;
+  }
+}
+
+.select {
+  width: 100%;
+  border: none;
+  border-bottom: 1px solid #dcddde;
+  padding: 2px 31px 14px 3px;
+  color: rgba($color: #000000, $alpha: 0.4);
+  appearance: none;
+
+  &__wrapper {
+    position: relative;
+
+    &::after {
+      content: '';
+      position: absolute;
+      background-image: url(../images/blog-cattegory-arrow.svg);
+      width: 19px;
+      height: 18px;
+      top: 5px;
+      right: 3px;
+    }
+  }
+}
+
+.search {
+
+  &__form {
+    width: 335px;
+    position: relative;
+    margin-bottom: 0;
+  }
+
+  &__input {
+    width: 100%;
+    border: none;
+    border-bottom: 1px solid #dcddde;
+    padding: 2px 31px 14px 3px;
+
+    &::placeholder {
+      color: #000000;
+      opacity: 0.4;
+    }
+  }
+
+  &__btn {
+    position: absolute;
+    border: none;
+    background-color: transparent;
+    padding: 0;
+    top: 5px;
+    right: 3px;
+  }
+}
+
+.blog-one {
+
+  h3,
+  h4,
+  p,
+  ul,
+  b {
+    max-width: 1220px;
+  }
+
+  h1 {
+    line-height: 1.2;
+    font-size: 96px;
+    text-transform: uppercase;
+    margin-bottom: 22px;
+    @extend %lora-400;
+  }
+
+  picture:first-of-type {
+    margin-bottom: 40px;
+  }
+
+  picture {
+    display: block;
+    margin-bottom: 50px;
+  }
+
+  b:first-of-type {
+    margin-bottom: 60px;
+  }
+
+  h3 {
+    @extend %lora-500;
+    font-size: 40px;
+    margin-bottom: 40px
+  }
+
+  h4 {
+    @extend %lora-400;
+    font-size: 32px;
+    margin-bottom: 20px;
+  }
+
+  p {
+    margin-bottom: 40px;
+  }
+
+  ul {
+    margin-bottom: 40px;
+    list-style-type: disc;
+    list-style-position: outside;
+    padding-left: 10px;
+  }
+
+  li {
+    list-style: inherit;
+    margin-left: 20px;
+
+    ul {
+      margin-bottom: 0;
+    }
+  }
+
+  .blog-one li:has(> ul) {
+    list-style-type: none;
+  }
+
+
+
+  b {
+    margin-bottom: 50px;
+    @extend %lora-400;
+    font-size: 32px;
+    display: inline-block;
+  }
+
+  &__stats {
+    display: flex;
+    align-items: center;
+    margin-bottom: 40px;
+  }
+
+  .blog-one__category {
+    padding: 8px 24px;
+    border: 1px solid #dcddde;
+    font-size: 14px;
+    margin-right: 40px;
+    margin-bottom: 0;
+  }
+
+  .blog-one__date {
+    margin-bottom: 0;
+    opacity: 0.3;
+    font-size: 18px;
+    @extend %inter-400;
+    padding-right: 20px;
+    margin-right: 20px;
+    position: relative;
+
+    &::after {
+      content: '';
+      position: absolute;
+      right: 0;
+      width: 1px;
+      height: 29px;
+      background-color: #000000;
+      opacity: 0.3;
+    }
+  }
+
+  .blog-one__list {
+    list-style: none;
+    display: flex;
+    gap: 16px;
+    align-items: center;
+    margin-bottom: 0;
+  }
+
+  .blog-one__item {
+    padding-left: 0;
+  }
+
+  &__link {
+    display: flex;
+    align-items: center;
+    gap: 4px;
+    opacity: 0.3;
+  }
+
+  &__link--active {
+    opacity: 1;
+  }
+
+  >.container-big {
+
+    /* перший абзац після h4 №3 */
+    >h4:nth-of-type(3)+p,
+    /* другий абзац під h4 №3 (у тебе йде p + ul + p) */
+    >h4:nth-of-type(3)+p+ul+p,
+    /* перший абзац після h4 №4 */
+    >h4:nth-of-type(4)+p {
+      max-width: 716px;
+    }
   }
 }
