--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1354,3 +1354,144 @@ body {
     }
   }
 }
+
+.reviews-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 60px;
+
+  &__title {
+    font-size: 64px;
+    @extend %lora-400;
+  }
+
+  &__link {
+    font-size: 24px;
+    color: rgba($color: vars.$color-accent, $alpha: 0.4);
+    border-bottom: 1px solid vars.$color-accent;
+  }
+}
+
+.reviews-slider {
+  overflow: hidden;
+  width: calc(100% - (100% - 1500px) / 2);
+  margin-bottom: 25px;
+}
+
+.reviews-rating {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+
+  &__list {
+    display: flex;
+    align-items: center;
+  }
+
+  &__item {
+    display: flex;
+    align-items: center;
+  }
+
+  &__link {
+    margin-left: 10px;
+    font-size: 16px;
+    color: rgba($color: vars.$color-accent, $alpha: 0.4);
+    border-bottom: 1px solid vars.$color-accent;
+  }
+}
+
+.reviews-new {
+  display: inline-block;
+  margin-top: 24px;
+  padding: 24px 40px;
+  text-transform: uppercase;
+  border: 1px solid vars.$color-accent;
+  font-size: 16px;
+  margin-bottom: 60px;
+}
+
+.reviews {
+
+  &__item {
+    margin-top: 20px;
+    border: 1px solid #dcddde;
+    padding: 40px 50px;
+  }
+
+  &__item-date {
+    opacity: 0.4;
+    font-size: 14px;
+    margin-bottom: 16px;
+  }
+
+  &__item-name {
+    margin-top: 18px;
+    margin-bottom: 24px;
+    display: flex;
+    align-items: center;
+    gap: 12px;
+  }
+
+  &__item-name-img {
+    object-fit: cover;
+    border-radius: 50%;
+  }
+
+  &__item-text {
+    max-width: 1220px;
+  }
+
+  &__item-images {
+    margin-top: 24px;
+    display: flex;
+    gap: 10px;
+
+    img {
+      object-fit: cover;
+    }
+  }
+
+}
+
+.reviews-nav {
+  position: absolute;
+  max-width: 1520px;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+}
+
+.reviews-slider-arrow {
+  position: absolute;
+  top: 24px;
+  cursor: pointer;
+}
+
+.reviews-slider-prev {
+  right: 158px;
+}
+
+.reviews-slider-next {
+  right: 0;
+}
+
+.reviews-slider-pagination {
+  position: absolute;
+  right: 44px;
+  top: 21px;
+  font-size: 18px;
+  color: rgba($color: vars.$color-accent, $alpha: 0.3);
+  left: auto;
+  width: auto;
+
+  .swiper-pagination-current {
+    padding-right: 17px;
+    color: vars.$color-accent ;
+  }
+
+  .swiper-pagination-total {
+    padding-left: 17px;
+  }
+}
