--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -2,6 +2,7 @@
 @use 'reset';
 @use 'fonts';
 @use '../../node_modules/swiper/swiper-bundle.css';
+@use '../../node_modules/nouislider/dist/nouislider.css';
 @use 'global';
 
 body {
@@ -1124,7 +1125,6 @@ body {
   }
 
   &__list {
-    display: grid;
     gap: 50px 20px;
     grid-template-columns: repeat(4, 1fr);
   }
@@ -1276,8 +1276,6 @@ body {
     list-style-type: none;
   }
 
-
-
   b {
     margin-bottom: 50px;
     @extend %lora-400;
@@ -1374,9 +1372,15 @@ body {
 }
 
 .reviews-slider {
-  overflow: hidden;
-  width: calc(100% - (100% - 1500px) / 2);
-  margin-bottom: 25px;
+  width: 100%;
+  max-width: 1500px;
+  margin: 0 auto 25px;
+  overflow: hidden; // можна залишити тут
+}
+
+.reviews-slider .swiper-slide {
+  flex-shrink: 0;
+  width: auto; // або конкретну ширину (наприклад 180px), якщо треба 8 в ряд
 }
 
 .reviews-rating {
@@ -1452,7 +1456,6 @@ body {
       object-fit: cover;
     }
   }
-
 }
 
 .reviews-nav {
@@ -1494,4 +1497,292 @@ body {
   .swiper-pagination-total {
     padding-left: 17px;
   }
+}
+
+.catalog {
+  &__top {
+    margin-bottom: 80px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  &__view-mod {
+    display: flex;
+    gap: 30px;
+    font-size: 11px;
+    color: vars.$color-text-muted;
+  }
+
+  &__title {
+    @extend %lora-400;
+    font-size: 45px;
+    text-transform: uppercase;
+  }
+
+  &__sort-wrapper {
+    position: relative;
+
+    &::after {
+      content: '';
+      position: absolute;
+      background-image: url(../images/sort-arrow.svg);
+      width: 14px;
+      height: 9px;
+      top: 9px;
+      right: 9px;
+    }
+  }
+
+  &__sort-select {
+    padding: 5px 30px 5px 9px;
+    width: 175px;
+    border-radius: 3px;
+    border: 1px solid vars.$color-text-muted;
+    color: vars.$color-text-muted;
+    font-size: 11px;
+    appearance: none;
+  }
+
+  &__content {
+    display: flex;
+    gap: 40px;
+  }
+
+  &__filter {
+    width: 270px;
+    padding: 20px 26px;
+    border: 1px solid vars.$color-text-muted;
+    align-self: flex-start;
+  }
+
+  &__filterbox {
+    padding-bottom: 5px;
+    border-bottom: 1px solid vars.$color-text-muted;
+    margin-bottom: 40px;
+  }
+
+  &__filterbox-title {
+    margin-bottom: 11px;
+    padding-left: 20px;
+    position: relative;
+    @extend %lora-400;
+    color: vars.$color-primary;
+
+    &::before {
+      content: '';
+      position: absolute;
+      left: 0;
+      bottom: 6px;
+      width: 10px;
+      height: 10px;
+      background-color: vars.$color-primary;
+    }
+  }
+
+  &__filterbox-itemrange {
+    padding-bottom: 20px;
+  }
+
+  &__filterbox-items {
+    column-count: 2;
+    column-gap: 40px;
+  }
+
+  &__filterbox-clean {
+    background-color: transparent;
+    padding: 0;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 12px;
+    color: vars.$color-primary;
+    text-decoration: underline;
+  }
+
+  &__content-items {
+    grid-template-columns: repeat(3, 1fr);
+    gap: 50px 40px;
+  }
+
+  &__content-item {
+    text-align: center;
+
+    img {
+      margin-bottom: 20px;
+    }
+  }
+
+  &__content-name {
+    font-size: 20px;
+    margin-bottom: 10px;
+    color: vars.$color-primary;
+    @extend %opensans-400;
+  }
+
+  &__content-item {
+    @extend %opensans-700;
+  }
+
+  .checkbox-label {
+    display: block;
+    margin-bottom: 15px;
+    font-size: 11px;
+  }
+
+  .check-style {
+    margin-top: -1px;
+  }
+
+  .radio-label {
+    display: block;
+    margin-bottom: 15px;
+    font-size: 11px;
+  }
+
+  .radio-style {
+    margin-top: -1px;
+  }
+
+}
+
+.view-mod {
+  display: flex;
+  gap: 10px;
+
+
+  &__btn {
+    padding: 0;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+  }
+
+  &__container--grid {
+    display: grid;
+  }
+
+  &__container--line {
+    display: block;
+
+    .catalog__content-item {
+      display: flex;
+
+      img {
+        margin-right: 30px;
+      }
+    }
+
+    .blog__list-item {
+      display: flex;
+      gap: 20px;
+      margin-bottom: 20px;
+
+      img {
+        width: 180px;
+      }
+    }
+  }
+}
+
+.range {
+  input[type="number"] {
+    appearance: textfield;
+
+    &::-webkit-outer-spin-button,
+    &::-webkit-inner-spin-button {
+      -webkit-appearance: none;
+      margin: 0;
+    }
+  }
+
+  &__inputs {
+    display: flex;
+    align-items: center;
+    gap: 12px;
+    margin-bottom: 35px;
+  }
+
+  &__label {
+    position: relative;
+
+    &::before {
+      content: '€';
+      position: absolute;
+      top: 11px;
+      left: 12px;
+      font-size: 11px;
+      color: vars.$color-text-muted;
+    }
+
+    input {
+      font-size: 11px;
+      color: vars.$color-text-muted;
+      border: 1px solid vars.$color-text-muted;
+      padding: 10px 5px 10px 30px;
+      width: 94px;
+    }
+  }
+
+  &__list {
+    display: flex;
+    align-items: center;
+    font-size: 11px;
+    gap: 11px;
+    padding-top: 15px;
+
+    li {
+      position: relative;
+
+      &:first-child {
+        margin-right: 4px;
+      }
+
+      &::before {
+        content: '';
+        width: 1px;
+        height: 6px;
+        position: absolute;
+        background-color: vars.$color-primary;
+        top: -19px;
+        left: 52%;
+
+      }
+    }
+  }
+
+  .noUi-target {
+    background: vars.$color-text-muted;
+    border-radius: 0;
+    border: none;
+    box-shadow: none;
+  }
+
+  .noUi-horizontal {
+    height: 2px;
+  }
+
+  .noUi-horizontal .noUi-handle {
+    width: 20px;
+    height: 20px;
+    right: -17px;
+    top: -9px;
+  }
+
+  .noUi-handle {
+    border: 1px solid vars.$color-text-muted;
+    border-radius: 50%;
+    background: #fff;
+    cursor: pointer;
+    box-shadow: none;
+  }
+
+  .noUi-handle::after,
+  .noUi-handle::before {
+    display: none;
+  }
+
+  .noUi-handle.noUi-handle-upper {
+    right: 0;
+  }
+
 }
